ChangeLog file for Endian libencloud

libencloud 0.7:
	- api: new Config API (json)
	- api: rename '/api_v1' => '/api/v1'
	- client: new get(), post() functions

libencloud 0.6.4 (10/06/2014):
	- [CONNECT-115] Slow disconnect on w32
	- [CONNECT-142] Support for N-branding (about module)

libencloud 0.6.3 (27/05/2014):
	- [CONNECT-133] Remove data from previous connection
	- [CONNECT-135] API: Use JSONP instead of JSON only if requested
	- yocto: allow compilation of tests without QtGui (CONFIG += nogui)
	- build: fix header install paths, INSTALLDIR=/usr (unix), install test and config
	  generate .revision and use it if .git does not exist (build from dist)
	- test/sece: SECE_DISABLE_SERVICE by default, comment it to use external service
	- config: make all prefixes public, += logPrefix
	- http: GET params ending up in action string
	- unix: /var/log/encloud for logs, /var/efw/encloud for storage  

libencloud 0.6.2 (28/04/2014):
	- [CONNECT-124] Create routes not only for individual IP address but also for network
	- [CONNECT-114] Handle Switchboard fallback server
	- api/status: new "fallback" boolean field; empty errors and need not being reemitted
	- api/setup: internal_ip => openvpn_internal_ip, fallback_openvpn_internal_ip
	- *ece: don't getCertificate if we already have a valid one;
	  fail if getInfo yields valid=false
	- sece: license is now a SystemScope QSetting; improved license handling
	- conf: user/pass vs x509 auth is configurable
	- error: new Retry object, improved handling of CodeNull vs CodeGeneric errors
	- vpn: 'client' wasn't being dumped, handle retries and timeout
	- test: scripts/vpncli.sh extensions for *ECE testing; SECE sample wip

libencloud 0.6.1 (15/04/2014):
	- [CONNECT-106] custom ProxyFactory to avoid proxying localhost requests;
	  handle global proxy settings in core
	- auth: typeFromQt(), typeToQt(), toString()
	- proxy: toString()
	- [CONNECT-121] vpn: improved process failure handling; error showing Proxy + UDP not allowed;