@@ -89,10 +89,15 @@ static char libEncloudTapNameBuffer [256];
 #define LIBENCLOUD_AUTH_X509            "x509"
 #define LIBENCLOUD_AUTH_CERTKEY         "cert-key"
 #define LIBENCLOUD_AUTH_PKCS12          "pkcs12"
+#define LIBENCLOUD_CA_FILE              "ca.pem"
+#define LIBENCLOUD_CERT_FILE            "cert.pem"
+#define LIBENCLOUD_KEY_FILE             "key.pem"
+#define LIBENCLOUD_P12_FILE             "auth.p12"
 #define LIBENCLOUD_INIT_CA_FILE         "init_ca.pem"
 #define LIBENCLOUD_INIT_CERT_FILE       "init_cert.pem"
 #define LIBENCLOUD_INIT_KEY_FILE        "init_key.pem"
 #define LIBENCLOUD_INIT_P12_FILE        "init.p12"
+#define LIBENCLOUD_OP_CA_FILE           "op_ca.pem"
 #define LIBENCLOUD_OP_CERT_FILE         "op_cert.pem"
 #define LIBENCLOUD_OP_KEY_FILE          "op_key.pem"
 #define LIBENCLOUD_OP_P12_FILE          "op.p12"
