@@ -31,8 +31,6 @@ QicSetup::QicSetup (Config *cfg)
             this, SIGNAL(authRequired(Auth::Id)));
     connect(this, SIGNAL(authSupplied(Auth)),
             &_setupMsg, SLOT(authSupplied(Auth)));
-    connect(this, SIGNAL(verifyCAForward(bool)),
-            &_setupMsg, SLOT(verifyCASupplied(bool)));
     connect(&_setupMsg, SIGNAL(serverConfigSupply(QVariant)),
             this, SIGNAL(serverConfigSupply(QVariant)));
 
@@ -58,11 +56,6 @@ int QicSetup::start ()
     _loginMsg.setData(data);
     _loginMsg.process();
 #endif
-
-    // TODO linux/w32: grab CA certificate from Connect if supplied
-    QFile::copy("/var/lib/4ic/" + QString(LIBENCLOUD_INIT_CA_FILE),
-            _cfg->config.sslInit.caPath.absoluteFilePath());
-    // !TODO
 
     if (_setupMsg.process())
         return ~0;
@@ -136,8 +129,6 @@ int QicSetup::_initMsg (MessageInterface &msg)
 // Clear all generated data
 void QicSetup::_clear ()
 {
-    if (QFile::exists(_cfg->config.sslInit.caPath.absoluteFilePath()))
-        LIBENCLOUD_ERR_IF (!QFile::remove(_cfg->config.sslInit.caPath.absoluteFilePath()));
     if (QFile::exists(_cfg->config.sslOp.caPath.absoluteFilePath()))
         LIBENCLOUD_ERR_IF (!QFile::remove(_cfg->config.sslOp.caPath.absoluteFilePath()));
     if (QFile::exists(_cfg->config.vpnConfPath.absoluteFilePath()))
