@@ -46,7 +46,6 @@ signals:
     //
 
     virtual void authSupplied (const Auth &auth) = 0; 
-    virtual void verifyCAForward (bool b) = 0; 
 
 #ifdef LIBENCLOUD_MODE_SECE
     virtual void licenseForward (const QUuid &uuid) = 0;
